# Timer

./: .gitignore  Box.cpp  Box.h  CMakeLists.txt  Clock.h  SystemClock.cpp  SystemClock.h  Timer  Timer.cpp  Timer.h  main.cpp
Test/: CMakeLists.txt  ClockFixture.cpp  ClockTest.cpp  MockClock.h  TimerFixture.cpp  TimerTest.cpp  runAllTests.cpp
